added Read-Through strategy
